tests/toylang/neg/000497_mutation.toylang
program a = { a = else a == a; } .
